# dynamont

./: .gitattributes  .gitignore  CITATION.cff  CMakeLists.txt  Makefile  README.md  README.rst  build.sh  compile.sh  notes.txt  output.txt  pyproject.toml  tests.txt
.github/workflows/: run_test.yml
conda.recipe/: README.md  conda_build_config.yaml  meta.yaml
data/: README.md  README.sh  calc_norm_models.py  extend_model.py  fillModels.py  plot_models.py  template_median69pA_extended.model  template_median69pA_reduced.model  template_median69pA_reduced_halfed.model
data/bastiIVTA/: README.sh  normpAmodels.model  pAmodels.model
data/ecoliWTModels/: README.sh  pAmodels.model
data/models/: README.md
data/modelsF5C/bastiIVTA/: README.sh  polyAstdmodels.model
data/modelsF5C/ecoliTrmbKO/: README.sh
data/modelsF5C/ecoliWTModels/: README.sh  normpAmodels.model  pAmodels.model.extended  pAmodels.model.filled
data/modelsF5C/ecoliWTModels_q15/: polyAstdmodels.model
data/norm_models/: README.md  README.sh  rna_r9.4_180mv_70bps.model  rna_r9.4_180mv_70bps_05.model  rna_r9.4_180mv_70bps_extended.model  rna_r9.4_180mv_70bps_extended_stdev0_25.model  rna_r9.4_180mv_70bps_extended_stdev0_5.model  rna_r9.4_180mv_70bps_extended_stdev1.model
dynamont-polya/src/: polyA.cpp  polyA.py  utils.cpp
include/: NT.hpp  NTC.hpp  NT_banded.hpp  argparse.hpp  dynamont_NT.hpp  dynamont_NTC.hpp  utils.hpp
models/: 9merTo5mer.py  9merToKmer.py  README.md
models/rna/r9.4.1/: trained_rna002_5mer.model
models/rna/rna002/: README.md  rna002_5mer.model
models/rna/rna004/: rna004_5mer.model
models/rna/rp4/: rna004_7mer.model
src/: error.txt  estimateModelsFromF5C.py  extractF5Cseg.py  fileio.py  last_cookie.txt  plotF5c.py  plotSegmentation.py  segment  segment.cpp  segment.py  segment_affine.cpp  segment_affine_deletion  segment_affine_deletion.cpp  segmentation  segmentation.cpp  segmentation_basic.cpp  train.py  train_mp.py  train_mp_sameBatch.py
src/compareTools/: compareTools.py
src/cpp/: NT.cpp  NTC.cpp  NTC_main.cpp  NT_banded.cpp  NT_banded_api.cpp  NT_banded_main.cpp  NT_main.cpp  dynamont_NT.cpp  dynamont_NTC.cpp  dynamont_polyA.cpp  utils.cpp
src/dynamont/: FileIO.py  Outlierlist.py  compile.sh  dynamont_NT.cpp  dynamont_NTK.cpp  dynamont_NT_banded.cpp  dynamont_TK.cpp  dynamont_polyA.cpp  extractDoradoMoves.py  notes.md  plotSegmentation.py  plotTrainedParams.py  segment.py  segmentation_3d.cpp  segmentation_3d_extended.cpp  segmentation_3d_sparse.cpp  segmentation_3d_sparsed.cpp  segmentation_3d_sparsed_reduced.cpp  segmentation_basic  segmentation_basic copy 2.cpp  segmentation_basic copy 3.cpp  segmentation_basic copy.cpp  segmentation_basic.cpp  segmentation_basic_sparsed.cpp  segmentation_extended.cpp  segmentation_indel  segmentation_indel.cpp  test_command_fail.txt  train.py  trainTransitions.py  train_TK.py  utils.cpp  utils.hpp
src/edgeDetection/: compareTools.py  edgeDetection.py
src/f5c/: estimateModelsFromF5C.py  extractF5Cseg.py
src/old/: segment  segment.cpp  segment_affine  segment_affine.cpp  segment_affine_deletion  segment_affine_deletion.cpp  segmentation_prefix.cpp  train.py  train_affine_deletion.py  train_prefix.py
src/plot/: TODO_plotResiduals.py  plotF5c.py  plotPDF.py  plotPDF_kmers.py  plotSegmentation.py
src/python/: __init__.py  _version.py  nt_entry_banded.py  ntc_entry.py
src/python/edgeDetection/: __init__.py  compareDatasets.py  compareTools.py  edgeDetection.py  plotToolSegments.py
src/python/misc/: __init__.py  collectMetrics.py  compareDatasets.py  compareTools.py  csv_to_ms_heatmap.py  csv_to_tex.py  edgeDetection.py  evaluateReads.py  evaluateSubsequentTools.py  extractDoradoMoves.py  segToFasta.py  tomboToFasta.py
src/python/plot/: plotSegmentation.py  plotToolSegments.py  plotTrainedParams.py
src/python/segmentation/: FileIO.py  __init__.py  dynamont_NT.py  dynamont_NTC.py  segment.py  train.py
test/: compile.sh  run_cpp_test.sh  run_python_test.sh  run_tests.sh  test.cpp  test_FileIO.py  test_managed_list.py  test_segment.py  test_train.py
tests/: plot_probs.py  probs.txt  result.csv  summary.csv  test_affine.py  test_affine_deletion.py
